WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214264
REGRESSION (
r262538
): Nullptr Deref in WTF::Detail::CallableWrapper<WebKit::WebResourceLoadStatisticsStore::performDailyTasks()::$_66, void>::call
https://bugs.webkit.org/show_bug.cgi?id=214264
Summary
REGRESSION (r262538): Nullptr Deref in WTF::Detail::CallableWrapper<WebKit::W...
Brent Fulgham
Reported
2020-07-13 10:42:38 PDT
The change in
r262538
added a type check outside of a nullptr check. This introduced a nullptr crash.
Attachments
Patch
(2.02 KB, patch)
2020-07-13 10:46 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2020-07-13 10:45:23 PDT
<
rdar://problem/65093949
>
Brent Fulgham
Comment 2
2020-07-13 10:46:21 PDT
Created
attachment 404156
[details]
Patch
EWS
Comment 3
2020-07-13 12:00:13 PDT
Committed
r264307
: <
https://trac.webkit.org/changeset/264307
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404156
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug