REGRESSION (r262538): Nullptr Deref in WTF::Detail::CallableWrapper<WebKit::WebResourceLoadStatisticsStore::performDailyTasks()::$_66, void>::call https://bugs.webkit.org/show_bug.cgi?id=214264 <rdar://problem/65093949>

Reviewed by Darin Adler.

A new type check was added outside of the protecting nullptr check. This introduced
a new nullptr dereference bug.

* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::performDailyTasks):


Canonical link: https://commits.webkit.org/227072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264307 268f45cc-cd09-0410-ab3c-d52691b4dbfc